--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: wy_keyboard_widgets
 description: the keyboard widgets
 version: 0.0.1
-homepage:
+homepage: https://github.com/lmanliang/wy_keyboard_widgets
 
 environment:
   sdk: ">=2.17.6 <3.0.0"
